--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   mongodb:
-    image: mongo
+    image: mongo:4.4.6
     volumes:
       - ./data/mongodbdata:/data/db
     env_file:
